--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                               <a class="nav-link" href="#">Productos</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="https://borleskine.github.io/PortafolioJohnny/">GitHub</a>
+                              <a class="nav-link" href="https://borleskine.github.io/PortafolioJohnny">GitHub</a>
                           </ul>
                         </div>
                       </nav>
