--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                           <ul class="navbar-nav">
                             <li class="nav-item active">
-                              <a class="nav-link" href="#">Contacto</a>
+                              <a class="nav-link" href="https://github.com/Borleskine">Contacto</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="#">Productos</a>
